# DEMO

./: .gitignore  package-lock.json  package.json  rollup.config.js  tsconfig.json
public/: index.html  spwn.js  spwn_highlight_rules.js
public/ace-build/: ace-modules.d.ts  webpack-resolver.js
public/ace-build/css/: ace.css
public/ace-build/src-noconflict/: ace.js  ext-beautify.js  ext-code_lens.js  ext-hardwrap.js  ext-language_tools.js  ext-modelist.js  ext-options.js  ext-prompt.js  ext-settings_menu.js  keybinding-vim.js  mode-csound_document.js  mode-csound_orchestra.js  mode-ion.js  mode-partiql.js  mode-sac.js  mode-spwn.js  theme-MaterialOceanHighContrast.js  theme-clouds.js  theme-clouds_midnight.js  theme-cobalt.js  theme-dawn.js  theme-idle_fingers.js  theme-katzenmilch.js  theme-kr_theme.js  theme-kuroir.js  theme-material_ocean.js  theme-merbivore.js  theme-merbivore_soft.js  theme-monokai.js  theme-pastel_on_dark.js  theme-solarized_dark.js  theme-solarized_light.js  theme-tomorrow.js  theme-tomorrow_night.js  theme-tomorrow_night_blue.js  theme-tomorrow_night_bright.js  theme-tomorrow_night_eighties.js  theme-twilight.js  theme-xcode.js  (+1 more)
spwn-web/: Cargo.toml
spwn-web/src/: lib.rs
src/: App.svelte  constants.ts  examples.ts  gp5.ts  main.ts  tutorials.ts  util.ts
src/code_editor/: CodeEditor.svelte
src/gd_world/: gd_world.ts  resources.ts
src/objects/: object.ts  regular.ts  special.ts  triggers.ts  util.ts
src/sketch/: sketch.ts  spritesheets.ts
src/trigger_graph_sketch/: graph.ts  sketch.ts
src/world/: objectHandler.ts  world.ts
(+28 files in other folders)
